--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.8.5",
     "@angular/animations": "^10.1.6",
     "@angular/common": "~10.1.2",
     "@angular/compiler": "~10.1.2",
