--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [ ]
           },
           "configurations": {
             "production": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "neighbourhood"
+    }
+  },
+  "defaultProject": "neighbourhood",
+  "cli": {
+    "analytics": "f62193be-2137-4ab0-b667-a0144ed54bfe"
+  }
 }
