--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "bootstrap": "^4.5.0",
+    "chokidar": "^3.4.3",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "ngx-toaster": "^1.0.1",
